add destroy eks

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,10 +1,11 @@
-name: Launch EKS Cluster with Fargate
+name: Destroy EKS Cluster
 
 on:
   workflow_dispatch:
 
+
 jobs:
-  create-eks-cluster:
+  destroy-eks-cluster:
     runs-on: ubuntu-latest
 
     steps:
@@ -36,10 +37,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Create EKS Cluster with Fargate
+      - name: Delete EKS Cluster
         run: |
-          eksctl create cluster \
+          eksctl delete cluster \
             --name my-eks-cluster \
-            --version 1.30 \
-            --region us-east-1 \
-            --fargate
+            --region us-east-1
