--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,37 @@
-name: Deploy Serverless Application
+name: Build and Deploy
 
 on:
   push:
     branches:
-      - deploy
+      - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '14'
 
-      - name: Install Serverless Framework
-        run: npm install -g serverless
-
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm install
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southe  # Change this to your desired AWS region
+      - name: Run Jest tests
+        run: npm test
 
-      - name: Deploy with Serverless Framework
-        run: serverless deploy
+      - name: Build Docker image
+        run: |
+          docker build -t api api/ 
+          docker tag api:latest 851725519017.dkr.ecr.us-east-1.amazonaws.com/demo:latest
+
+      - name: Push Docker image to Amazon ECR
+        run: |
+          echo "${{ secrets.AWS_SECRET_ACCESS_KEY }}" | docker login --username AWS --password-stdin aws_account_id.dkr.ecr.region.amazonaws.com
+          docker push 851725519017.dkr.ecr.us-east-1.amazonaws.com/demo:latest
+
+
