--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Switch to directory
+        run: cd api
+
       - name: Install dependencies
         run: npm install
 
