--- a/api/test.yaml
+++ b/api/test.yaml
@@ -1,41 +1,37 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api-deployment
+  name: nlb-sample-app
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: api
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
+      app: nginx
   template:
     metadata:
       labels:
-        app: api
+        app: nginx
     spec:
       containers:
-      - name: api-container
-        image: stevenextwave/api:latest
-        ports:
-        - containerPort: 3000
+        - name: nginx
+          image: public.ecr.aws/nginx/nginx:1.23
+          ports:
+            - name: tcp
+              containerPort: 80
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-service
+  name: nlb-sample-service
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: external
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
 spec:
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
   type: LoadBalancer
   selector:
-    app: api
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 3000
+    app: nginx
