--- a/api/package.json
+++ b/api/package.json
@@ -4,12 +4,16 @@
   "description": "the email API",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
     "express": "^4.19.2",
+    "globals": "^15.3.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   },
