--- a/reader/package.json
+++ b/reader/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "eslint": "^9.3.0",
     "express": "^4.19.2",
+    "globals": "^15.3.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   },
