--- a/reader/package.json
+++ b/reader/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "^2.1.0",
     "eslint": "^9.3.0",
     "express": "^4.19.2",
     "globals": "^15.3.0",
